fix social nav hung on vertical alignment

--- a/style.css
+++ b/style.css
@@ -60,7 +60,10 @@ header {
 }
 .nav-social {
     display: flex;
-    flex-wrap: wrap;
+}
+.nav-social.show {
+    display: flex;
+    flex-direction: row;
 }
 
 ul {
@@ -136,7 +139,6 @@ input:focus {
 .button:hover {
     cursor: pointer;
 }
-
 .footer {
     display: flex;
     justify-content: center;
@@ -153,7 +155,6 @@ input:focus {
     background-color: #2699FB;
 
 }
-
 .champions-container {
     display: flex;
     flex-wrap: wrap;
@@ -169,7 +170,6 @@ input:focus {
     overflow: hidden;
     cursor: pointer;
 }
-
 .zoom {
     width: 100%;
     height: 100%;
@@ -181,7 +181,6 @@ input:focus {
     transition-duration: 1s;
     border-radius: 0;
 }
-
 .champs-box:hover .zoom,
 .champs-box:focus .zoom {
     transform: scale(.95);
@@ -204,9 +203,7 @@ a.underline-left:before {
 a.underline-left:hover::before {
     visibility: visible;
     width: 100%;
-
 }
-
 .top-container {
     position: absolute;
     left: 50%;
@@ -241,7 +238,6 @@ option:hover {
 .static-shadow {
     box-shadow: 0 2px 5px rgb(135, 135, 135);
 }
-/* Test */
 .button-container {
     display: flex;
     justify-content: center;
@@ -259,7 +255,6 @@ option:hover {
 }
 .button-dark-mode:hover {
     cursor: pointer;
-    /* background-color: #217ecf; */
     box-shadow: 0 2px 5px rgb(135, 135, 135);
 }
 
@@ -278,8 +273,6 @@ option:hover {
     color: white;
 }
 
-
-/* End test */
 @media screen and (max-width: 1229px){
     .top-nav {
         position: relative;
